<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#523A28"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#523A28"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txtAppTitle"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:padding="10dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditUserInfoBack"
            android:layout_width="41dp"
            android:layout_height="38dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arrow"
            app:backgroundTint="#523A28"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtMainMenu"
            android:layout_width="338dp"
            android:layout_height="37dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtMainMenu"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/viewMainMenu"
        android:layout_width="389dp"
        android:layout_height="5dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:background="#523A28"/>

    <TextView
        android:id="@+id/txtBookDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/txtBookDetails"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/txtAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtAuthor"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtPublishYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtPublishYear"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/publisher"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtAvailability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAvailability"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spAvailability"
            android:layout_width="214dp"
            android:layout_height="44dp"
            android:entries="@array/availability"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/btnAdd"
        tools:ignore="DuplicateSpeakableTextCheck" />
</LinearLayout>