<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateAccountActivity">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#523A28"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#523A28"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txtAppTitle"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:padding="10dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackToMain"
            android:layout_width="41dp"
            android:layout_height="38dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arrow"
            app:backgroundTint="#523A28"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtMainMenu"
            android:layout_width="338dp"
            android:layout_height="37dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtMainMenu"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/viewMainMenu"
        android:layout_width="389dp"
        android:layout_height="5dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:background="#523A28"/>

    <TextView
        android:id="@+id/txtUpdateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yxyUpdateAccInfo"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/txtSignUpName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="18"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/txtUserName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#A47551"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="18"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/txtPassword"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:textColorHint="#A47551"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtSignUpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="18"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/txtAddress"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColorHint="#A47551"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtZipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="18"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/txtZipCode"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#A47551"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="18"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/txtPhone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#A47551"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="18"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/txtEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#A47551"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    <Button
        android:id="@+id/btnUpdateAccount"
        style="@style/Widget.Material3.Button"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#A47551"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="20dp"
        android:text="@string/btnUpdate"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center"/>
</LinearLayout>