<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A47551"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:context=".SignInActivity">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/txtWelcome"
        android:textColor="#523A28"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:ems="18"
        android:hint="@string/txtUserName"
        android:inputType="textPersonName"
        android:textColorHint="#A47551"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="144dp"
        android:ems="18"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:textColorHint="#A47551"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnUpdateAccount"
        style="@style/Widget.Material3.Button"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="196dp"
        android:backgroundTint="#A47551"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/txtLogin"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnForgotPw"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="294dp"
        android:backgroundTintMode="multiply"
        android:text="@string/txtForgotPassword"
        android:textColor="#D0B49F"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="214dp"
        android:layout_marginBottom="237dp"
        android:text="@string/txtSignUp"
        android:textColor="#D0B49F"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="249dp"
        android:text="@string/txtNewUsers"
        android:textColor="#D0B49F"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="265dp"
        android:layout_height="167dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:contentDescription="@string/signImg"
        app:srcCompat="@drawable/welcome_img" />
</RelativeLayout>