<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackingActivity">

    <TextView
        android:id="@+id/txtReportBookTitle"
        android:layout_width="96dp"
        android:layout_height="25dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="18dp"
        android:text="@string/txtTitle"
        app:layout_constraintBottom_toTopOf="@+id/txtReaderId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:layout_marginTop="3dp"
        android:background="#523A28"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/menu"
            app:backgroundTint="#FFFFFF"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtAppTitle"
            android:layout_width="320dp"
            android:layout_height="57dp"
            android:background="#523A28"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txtAppTitle"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="57dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnEditUserInfoBack"
            android:layout_width="41dp"
            android:layout_height="38dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/arrow"
            app:backgroundTint="#523A28"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtMainMenu"
            android:layout_width="338dp"
            android:layout_height="37dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtReport"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:id="@+id/viewMainMenu"
        android:layout_width="389dp"
        android:layout_height="5dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:background="#523A28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="51dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/txtReportBookTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewMainMenu">

        <TextView
            android:id="@+id/viewYearly"
            android:layout_width="137dp"
            android:layout_height="51dp"
            android:text="@string/viewReportDaily"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/viewDaily"
            android:layout_width="137dp"
            android:layout_height="51dp"
            android:text="@string/viewReportMonthly"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/viewMonthly"
            android:layout_width="137dp"
            android:layout_height="51dp"
            android:text="@string/viewReportYearly"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtReaderId"
        android:layout_width="96dp"
        android:layout_height="25dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="25dp"
        android:text="@string/txtReaderId"
        app:layout_constraintBottom_toTopOf="@+id/txtBookId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReportBookTitle" />

    <TextView
        android:id="@+id/txtBookId"
        android:layout_width="96dp"
        android:layout_height="25dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="31dp"
        android:text="@string/txtBookId"
        app:layout_constraintBottom_toTopOf="@+id/txtStartDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReaderId" />

    <TextView
        android:id="@+id/txtStartDay"
        android:layout_width="96dp"
        android:layout_height="25dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="3dp"
        android:text="@string/txtStartDay"
        app:layout_constraintBottom_toTopOf="@+id/txtEndDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBookId" />

    <TextView
        android:id="@+id/txtEndDate"
        android:layout_width="96dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/txtEndday"
        app:layout_constraintBottom_toTopOf="@+id/txtCurrentPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStartDay" />

    <TextView
        android:id="@+id/txtCurrentPage"
        android:layout_width="96dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="104dp"
        android:text="@string/txtCurrentPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEndDate"
        app:layout_constraintVertical_bias="0.928" />


</androidx.constraintlayout.widget.ConstraintLayout>